# midiseq

./: example.hs  midiseq.cabal  stack.yaml  testsession  testsession2
app/: .Main.hs.swp  .Note.hs.swp  Eval.hs  Helpers.hs  Main.hs  Note.hs  Parse.hs  Sequence.hs
