name:                midiseq
version:             0.1.0.0
synopsis:            A MIDI live-coding environment.
description:         Please see README.md
homepage:            https://github.com/nunull/midiseq#readme
license:             BSD3
license-file:        LICENSE
author:              Timm Albers
maintainer:          timmm.albers@gmail.com
copyright:           2016 Timm Albers
category:            Music
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable midiseq-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , midiseq
                     , hmidi == 0.2.2.1
                     , split
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nunull/midiseq
